# rustgl-decals

./: Cargo.toml  README.md  exclude.gitignore
examples/: file_fetch.rs
shaders/: fragment.fs  vertex.vs
src/: lib.rs  main.rs
src/helpf/: shader_utils.rs  types.rs  utools.rs
