[package]
name = "merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}

#[dev-dependencies]
beryllium = "0.2.0-alpha.4"
imagine = "0.0.5"
deepsize = "0.2.0"
iunorm = "0.2.2"

[[bin]]
name = "rustgl-decals"
path = "./src/main.rs"

[[example]]
name = "fetch"
path = "./examples/file_fetch.rs"
